# socket-programming

./: .gitignore  .gitmodules  CMakeLists.txt  ClientMain.cpp  ServerMain.cpp  client.c  common.h  server.c
Client/: Client.cpp  Client.h  WClient.cpp  WClient.h
Common/: Common.h  PCommon.h  WCommon.h
Host/: Host.cpp  Host.h  PHost.cpp  PHost.h  WHost.cpp  WHost.h
Old/: Makefile  PCommon.h  client.c  server.c
Packet/: Packet.h
Server/: PServer.cpp  PServer.h  Server.cpp  Server.h  server.c
Service/: Service.cpp  Service.h
uml/: classDiagram.puml
xml/: sample.xml
